Simplify site, add information, remove CSS

--- a/index.html
+++ b/index.html
@@ -3,38 +3,53 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Software engineer personal website.">
-    <meta name="keywords" content="software, continuous integration, python development">
-    <meta name="author" content="Arda Kuyumcu">
-
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="./css/cover.css">
-
     <title>Arda Kuyumcu</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Personal website of Arda Kuyumcu.">
+    <meta name="keywords" content="software, continuous integration, python development, source control, infrastructure, engineering management">
+    <meta name="author" content="Arda Kuyumcu">
   </head>
 
-  <body class="text-center">
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-      <main role="main" class="inner cover mt-auto mb-auto">
-        <h1 class="cover-heading">Arda Kuyumcu</h1>
-        <p class="lead">Software engineer in San Francisco.</p>
-        <p class="lead">Currently working on Continuous Integration at <a href="https://www.lyft.com/" style="color: #ff00bf" target="_blank">Lyft</a>.</p>
+  <style>
+    body {
+      background-color: #f5f1e4;
+      color: black;
+      font-family: sans-serif;
+      max-width: 650px;
+      margin: 40px auto;
+      padding: 0 10px;
+      font: 18px/1.5;
+    }
+  </style>
 
-        <div class="cover-container d-flex justify-content-center">
-          <div class="p-2"><a href="https://www.linkedin.com/in/arda-kuyumcu-9712282a/" class="fa fa-linkedin" target="_blank"></a></div>
-          <div class="p-2"><a href="https://github.com/ardakuyumcu" class="fa fa-github" target="_blank"></a></div>
-          <div class="p-2"><a href="https://twitter.com/ardakuyumcu" class="fa fa-twitter" target="_blank"></a></div>
-        </div>
-      </main>
+  <body>
+    <h1>Arda Kuyumcu</h1>
 
-      <footer class="mastfoot mt-auto">
-        <div class="inner">
-          <p>&copy; 2018 | Arda Kuyumcu</p>
-        </div>
-      </footer>
-    </div>
+    <h2>About Me</h2>
+    <p>I am currently an Engineering Manager in the Bay Area supporting the Developer Pipelines Team at <a href="https://www.lyft.com/" style="color: #ff00bf" target="_blank">Lyft</a>.</p>
+    <p>My team is responsible for the infrastructure supporting builds, continuous integration, artifact management, package distribution, and source control.</p>
+
+    <h2>Work Experience</h2>
+
+    <h3>Lyft (Mar 2016 - Current)</h3>
+    <p>I joined Lyft in March 2016 as a Software Engineer on the Automation Team.</p>
+    <p>I became an IC/Manager in August 2019, a Staff Software Engineer in July 2020, and an Engineering Manager in December 2020.</p>
+
+    <h3>Amazon (Feb 2014 - Mar 2016)</h3>
+    <p>I joined Amazon in February 2014, and worked on the Amazon Prime Acquisition Team as a Software Engineer until March 2016.</p>
+
+    <h2>Education</h2>
+    <p>I graduated cum laude from the University of Pennsylvania in December 2013 with a Bachelor of Science in Engineering (Computer Science), and a BS in Economics from Wharton (Finance).</p>
+
+    <h2>Links</h2>
+    <ul>
+      <li><a href="https://www.linkedin.com/in/arda-kuyumcu-9712282a/" target="_blank">LinkedIn</a></li>
+    </ul>
+
+    <h2>Cats</h2>
+    <p>If you have made it this far, please don't hesitate to ask me about my cats!</p>
+    <footer>
+      <p>&copy; 2021 | Arda Kuyumcu</p>
+    </footer>
   </body>
 </html>
